<resources>
    <string name="app_name">Trójkąt w Kole</string>
    <string name="zamow">Zamów</string>
    <string name="restauracje">Restauracje</string>
    <string name="menu">Menu</string>
    <string name="nearest_restaurant">Najbliższa restauracja</string>
    <string name="distance">Odległość:</string>
    <string name="ingredients">Składniki:</string>
    <string name="choose_restaurant">Wybierz Restaurację</string>
    <string name="pickup">Odbiór Własny</string>
    <string name="delivery">Dowóz</string>
    <string name="add">Dodaj</string>
    <string name="confirm">Złóż zamówienie</string>
    <string name="order">Twoje zamówienie</string>
    <string name="orderconfirm">Potwierdź zamówienie</string>
    <string name="street">Ulica</string>
    <string name="number">Numer domu</string>
    <string name="phone">Numer telefonu</string>
    <string name="doneorder">Złożono zamówienie</string>
    <string name="search">Wyszukaj w Google</string>
    <string name="price">Cena: </string>

    <string name="settings">Ustawienia</string>
    <string name="change_to_english">Angielski</string>
    <string name="change_to_polish">Polski</string>
    <string name="toggle_dark_mode">Tryb ciemny</string>

</resources>