<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".OrderActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/editTextStreet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTitle"
        android:layout_marginTop="16dp"
        android:hint="@string/street" />

    <EditText
        android:id="@+id/editTextHouseNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextStreet"
        android:layout_marginTop="16dp"
        android:hint="@string/number" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextHouseNumber"
        android:layout_marginTop="16dp"
        android:hint="@string/phone"
        android:inputType="phone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewOrder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/buttonConfirmOrder"
        android:layout_below="@+id/editTextPhone"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/buttonConfirmOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orderconfirm"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>
</RelativeLayout>
