<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <include layout="@layout/header_layout"
        android:id="@+id/headerLayout"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/Restauracje"
            style="@style/AppButtonStyle"
            android:text="@string/restauracje"/>

        <Button
            android:id="@+id/Zamow"
            style="@style/AppButtonStyle"
            android:text="@string/zamow"/>

        <Button
            android:id="@+id/Menu"
            style="@style/AppButtonStyle"
            android:background="@color/button"
            android:text="@string/menu"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>